...
  internal static let accessFormConfirmPasswordValidation = L10n.tr("Localizable", "access_form_confirm_password_validation", fallback: "Passwords do not match")
  /// Enter email address
  internal static let accessFormEmailPlaceholder = L10n.tr("Localizable", "access_form_email_placeholder", fallback: "Enter email address")
  /// Email
  internal static let accessFormEmailTitle = L10n.tr("Localizable", "access_form_email_title", fallback: "Email")
...
  internal static let addJoinScreenLinkDescriptionInactive = L10n.tr("Localizable", "add_join_screen_link_description_inactive", fallback: "You cannot link this card to your payment cards yet.")
  /// Link
  internal static let addJoinScreenLinkTitle = L10n.tr("Localizable", "add_join_screen_link_title", fallback: "Link")
  /// You can add this card to Bink and show the onscreen barcode at the till to collect points.
  internal static let addJoinScreenStoreDescription = L10n.tr("Localizable", "add_join_screen_store_description", fallback: "You can add this card to Bink and show the onscreen barcode at the till to collect points.")
...
  internal static let addLoyaltyCardTitle = L10n.tr("Localizable", "add_loyalty_card_title", fallback: "Add loyalty card")
  /// Add my card
  internal static let addMyCardButton = L10n.tr("Localizable", "add_my_card_button", fallback: "Add my card")
  /// Add payment card
  internal static let addPaymentCardTitle = L10n.tr("Localizable", "add_payment_card_title", fallback: "Add payment card")
...
  internal static let barcodeTitle = L10n.tr("Localizable", "barcode_title", fallback: "Barcode")
  /// Card number:
  internal static let barcodeViewTitle = L10n.tr("Localizable", "barcode_view_title", fallback: "Card number:")
  /// We can only show you cards with barcodes or vouchers
  internal static let brandsListNoSupportedCardsDescription = L10n.tr("Localizable", "brands_list_no_supported_cards_description", fallback: "We can only show you cards with barcodes or vouchers")
...
  internal static let brandsListNoSupportedCardsTitle = L10n.tr("Localizable", "brands_list_no_supported_cards_title", fallback: "No supported cards")
  /// Browse brands
  internal static let browseBrandsTitle = L10n.tr("Localizable", "browse_brands_title", fallback: "Browse brands")
  /// Allow Access
  internal static let cameraDeniedAllowAccess = L10n.tr("Localizable", "camera_denied_allow_access", fallback: "Allow Access")
...
  internal static let cameraDeniedBody = L10n.tr("Localizable", "camera_denied_body", fallback: "To scan your cards, you’ll need to allow Bink access to your device’s camera.")
  /// Enter Manually
  internal static let cameraDeniedManuallyOption = L10n.tr("Localizable", "camera_denied_manually_option", fallback: "Enter Manually")
  /// Please allow camera access
  internal static let cameraDeniedTitle = L10n.tr("Localizable", "camera_denied_title", fallback: "Please allow camera access")
  /// OK
  internal static let cameraPermissionAllowOption = L10n.tr("Localizable", "camera_permission_allow_option", fallback: "OK")
  /// We need your camera to scan loyalty cards. It will not be used for other purposes.
  internal static let cameraPermissionBody = L10n.tr("Localizable", "camera_permission_body", fallback: "We need your camera to scan loyalty cards. It will not be used for other purposes.")
...
  internal static let cardLinkStatus = L10n.tr("Localizable", "card_link_status", fallback: "Link")
  /// Linked
  internal static let cardLinkedStatus = L10n.tr("Localizable", "card_linked_status", fallback: "Linked")
  /// Linking
  internal static let cardLinkingStatus = L10n.tr("Localizable", "card_linking_status", fallback: "Linking")
...
  internal static let contactUsActionTitle = L10n.tr("Localizable", "contact_us_action_title", fallback: "Contact Us")
  /// Continue
  internal static let continueButtonTitle = L10n.tr("Localizable", "continue_button_title", fallback: "Continue")
  /// Enter credentials
  internal static let credentialsTitle = L10n.tr("Localizable", "credentials_title", fallback: "Enter credentials")
...
  }
  /// Delete this card
  internal static let deleteCardTitle = L10n.tr("Localizable", "delete_card_title", fallback: "Delete this card")
  /// Tap to enlarge Aztec code
  internal static let detailsHeaderShowAztecCode = L10n.tr("Localizable", "details_header_show_aztec_code", fallback: "Tap to enlarge Aztec code")
...
  internal static let dismissPoll = L10n.tr("Localizable", "dismiss_poll", fallback: "Don't show me this poll again")
  /// Done
  internal static let done = L10n.tr("Localizable", "done", fallback: "Done")
  /// Edit my vote
  internal static let editMyVote = L10n.tr("Localizable", "edit_my_vote", fallback: "Edit my vote")
...
  internal static let howItWorksTitle = L10n.tr("Localizable", "how_it_works_title", fallback: "How it works")
  /// I accept
  internal static let iAccept = L10n.tr("Localizable", "i_accept", fallback: "I accept")
  /// I decline
  internal static let iDecline = L10n.tr("Localizable", "i_decline", fallback: "I decline")
...
  internal static let pcdActiveCardTitle = L10n.tr("Localizable", "pcd_active_card_title", fallback: "Linked cards")
  /// Add card
  internal static let pcdAddCardButtonTitle = L10n.tr("Localizable", "pcd_add_card_button_title", fallback: "Add card")
  /// Your payment card has expired. Please use the “Delete this card” action below to remove it from your wallet and add your new payment card if applicable. 
  /// 
...
  internal static let pllErrorTitle = L10n.tr("Localizable", "pll_error_title", fallback: "Error")
  /// Add payment cards
  internal static let pllScreenAddCardsButtonTitle = L10n.tr("Localizable", "pll_screen_add_cards_button_title", fallback: "Add payment cards")
  /// The payment cards below will be linked to your %@. Simply pay with them to collect points.
  internal static func pllScreenAddMessage(_ p1: Any) -> String {
...
  internal static let settingsRowSecurityTitle = L10n.tr("Localizable", "settings_row_security_title", fallback: "Security and privacy")
  /// Terms and conditions
  internal static let settingsRowTermsandconditionsTitle = L10n.tr("Localizable", "settings_row_termsandconditions_title", fallback: "Terms and conditions")
  /// Theme
  internal static let settingsRowThemeTitle = L10n.tr("Localizable", "settings_row_theme_title", fallback: "Theme")
...
  internal static let whoWeAreTitle = L10n.tr("Localizable", "who_we_are_title", fallback: "Who we are")
  /// Yes
  internal static let yes = L10n.tr("Localizable", "yes", fallback: "Yes")
  /// First name
  internal static let zendeskIdentityPromptFirstName = L10n.tr("Localizable", "zendesk_identity_prompt_first_name", fallback: "First name")
  /// Last name
  internal static let zendeskIdentityPromptLastName = L10n.tr("Localizable", "zendesk_identity_prompt_last_name", fallback: "Last name")
  /// Please enter your contact details
  internal static let zendeskIdentityPromptMessage = L10n.tr("Localizable", "zendesk_identity_prompt_message", fallback: "Please enter your contact details")
...
