...
        return item
    }
    
    private func getTabBarPaymentButton() -> UITabBarItem {
        let item = UITabBarItem(title: nil, image: Asset.paymentInactive.image, tag: Buttons.paymentItem.rawValue)
        item.selectedImage = Asset.paymentActive.image
        item.title = "Payment"
        item.imageInsets = UIEdgeInsets(top: Constants.iconInsets, left: 0, bottom: -Constants.iconInsets, right: 0)
        return item
    }
    
    func toBrowseBrandsScreen() {
        let viewController = ViewControllerFactory.makeBrowseBrandsViewController()
...
