...
                            <rect key="frame" x="0.0" y="128" width="414" height="303"/>
                            <subviews>
                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bink-logo" translatesAutoresizingMaskIntoConstraints="NO" id="W07-ft-Vcs">
                                    <rect key="frame" x="20" y="0.0" width="374" height="303"/>
                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <accessibility key="accessibilityConfiguration" identifier="Barcode imageview"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="303" id="5gm-cV-ex0"/>
                                    </constraints>
                                </imageView>
                            </subviews>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
