...
    }()
    
    private lazy var showBarcodeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.titleLabel?.font = .bodyTextLarge
        button.addTarget(self, action: #selector(showBarcodeButtonPressed), for: .touchUpInside)
        button.accessibilityIdentifier = "Show barcode button"
        return button
    }()
    
    private lazy var modulesStackView: UIStackView = {
        let stackView = UIStackView(arrangedSubviews: [pointsModule, linkModule])
        stackView.translatesAutoresizingMaskIntoConstraints = false
...
